<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_screens"
    tools:context=".IniciarSesion">

    <TextView
        android:id="@+id/txt_IniciaSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_log_in"
        android:textColor="#000000"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.068" />

    <Button
        android:id="@+id/btn_entrar"
        style="@style/diseño_botones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/logo_name"
        android:onClick="metodoLog"
        android:text="@string/btn_entrar"
        android:textColor="#090909"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_password" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/txt_contraseña_olvidada"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_entrar"
        app:layout_constraintVertical_bias="0.098" />

    <EditText
        android:id="@+id/plain_txt_InCorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:drawableStart="@drawable/ic_nombre_usuario"
        android:drawablePadding="20dp"
        android:drawableTint="#000000"
        android:ems="10"
        android:hint="@string/plain_txt_correo"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="221dp"
        android:layout_height="164dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/img_iniciosesion"
        android:onClick="llenarCampos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_IniciaSesion"
        app:srcCompat="@mipmap/img_logo_usuario" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="281dp"
        android:layout_height="41dp"
        android:layout_marginTop="12dp"
        android:onClick="irCrearCuenta"
        android:text="@string/txt_crearCuenta"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"

        app:layout_constraintVertical_bias="0.007"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/txt_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:drawableStart="@drawable/ic_logo_password"
        android:drawablePadding="20dp"
        android:drawableTint="#000000"
        android:ems="10"

        android:hint="@string/plain_txt_contraseña"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plain_txt_InCorreo" />


</androidx.constraintlayout.widget.ConstraintLayout>