<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_screens"
    tools:context=".Crear_Cuenta">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/logo_name"
        android:hint="@string/txt_Ingresa_Tus_Datos"
        android:textColor="#FDFCFC"
        android:textColorHint="#F8F5F5"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/design_buttons"
        android:backgroundTint="@null"
        android:fontFamily="@font/logo_name"
        android:onClick="irInicio"
        android:text="@string/btn_ConfirmarCrearCuenta"
        android:textSize="24sp"
        app:backgroundTint="@null"
        app:icon="@android:drawable/checkbox_on_background"
        app:iconTint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextConfirmarPass"
        app:layout_constraintVertical_bias="0.328" />

    <EditText
        android:id="@+id/editTextTextConfirmarPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:drawableEnd="@drawable/ic_logo_password"
        android:drawableTint="#000000"
        android:ems="10"
        android:hint="@string/plain_txt_confirmarContrasela"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#E1BEE7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <EditText
        android:id="@+id/txt_Nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:drawableEnd="@drawable/ic_nombre_usuario"
        android:drawableTint="#000000"
        android:ems="10"
        android:hint="@string/creaNombre"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#FFCDD2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_cc_icono_usuario" />

    <EditText
        android:id="@+id/txt_correo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:drawableEnd="@android:drawable/ic_dialog_email"
        android:drawableTint="#000000"
        android:ems="10"
        android:hint="@string/plain_correo_CrearCuenta"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#E1BEE7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_apellido" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:drawableEnd="@drawable/ic_logo_password"
        android:drawableTint="#050505"
        android:ems="10"
        android:hint="@string/plain_txt_crearContraseña"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#E1BEE7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_correo" />

    <EditText
        android:id="@+id/txt_apellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:drawableEnd="@drawable/ic_nombre_usuario"
        android:drawableTint="#000000"
        android:ems="10"
        android:hint="@string/crearApellido"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#FFCDD2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_Nombre" />

    <ImageView
        android:id="@+id/img_cc_icono_usuario"
        android:layout_width="167dp"
        android:layout_height="142dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/img_crearcuenta"
        android:onClick="llenarCampos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@mipmap/img_logo_usuario" />

</androidx.constraintlayout.widget.ConstraintLayout>