<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_screens"
    tools:context=".agendar_cita">

    <EditText
        android:id="@+id/edit_txt_metodo_pago"
        android:layout_width="182dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:drawableEnd="@drawable/pago"
        android:drawableTint="#000000"
        android:ems="10"
        android:hint="@string/txt_metodo_pago_input"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_metodo_pago"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_hora"
        android:layout_width="247dp"
        android:layout_height="35dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="@string/tv_hora_de_cita"
        android:textColor="#000000"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.062" />

    <TextView
        android:id="@+id/tv_metodo_pago"
        android:layout_width="257dp"
        android:layout_height="43dp"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:text="@string/tipo_pago"
        android:textColor="#000000"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_time_hora_cita"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="llenaDatos"
        android:text="@string/tv_cita"
        android:textColor="#000000"
        android:textSize="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/text_time_hora_cita"
        android:layout_width="187dp"
        android:layout_height="49dp"
        android:layout_marginTop="28dp"
        android:drawableEnd="@drawable/reloj"
        android:drawableTint="#000000"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/hora_cita"
        android:inputType="time"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_hora"
        app:layout_constraintVertical_bias="0.004" />

    <TextView
        android:id="@+id/tv_notas_u_obser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/tv_notas"
        android:textColor="#000000"
        android:textColorHint="#4C3D3D"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_txt_metodo_pago" />

    <Button
        android:id="@+id/btn_agendar"
        style="@style/diseño_botones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/reloj"
        android:drawableTint="#000000"
        android:onClick="btnAgendar"
        android:text="@string/btn_agender"
        android:textColor="#000000"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_observaciones"
        app:layout_constraintVertical_bias="0.382" />

    <EditText
        android:id="@+id/txt_observaciones"
        android:layout_width="253dp"
        android:layout_height="98dp"
        android:ems="10"
        android:gravity="center|start|right"
        android:hint="@string/txt_observaciones"
        android:inputType="textMultiLine"
        android:textAlignment="textEnd"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_notas_u_obser"
        app:layout_constraintVertical_bias="0.149"
        tools:ignore="RtlCompat" />

</androidx.constraintlayout.widget.ConstraintLayout>