<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_screens"
    tools:context=".interfazUsuario">

    <Button
        android:id="@+id/btn_enviar"
        style="@style/diseño_botones"
        android:layout_width="89dp"
        android:layout_height="53dp"
        android:layout_marginTop="70dp"
        android:onClick="buscador"
        android:text="@string/btn_enviar"
        android:textColor="#151414"
        android:textSize="12dp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_Buscador"
        android:layout_width="212dp"
        android:layout_height="53dp"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="110dp"
        android:drawableEnd="@drawable/reloj"
        android:drawableTint="#000000"
        android:ems="10"
        android:hint="Buscar..."
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.573"
        app:layout_constraintStart_toEndOf="@+id/btn_enviar"
        app:layout_constraintTop_toTopOf="@+id/btn_enviar" />

    <Button
        android:id="@+id/button3"
        style="@style/diseño_botones"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:layout_marginTop="16dp"
        android:onClick="tomarFoto"
        android:text="@string/btn_escanear_qr"
        android:textColor="#000000"
        android:textSize="20sp"
        app:backgroundTint="@null"
        app:icon="@drawable/qr"
        app:iconGravity="textEnd"
        app:iconSize="50dp"
        app:iconTint="#000000"
        app:layout_constraintEnd_toEndOf="@+id/editText_Buscador"
        app:layout_constraintStart_toStartOf="@+id/btn_enviar"
        app:layout_constraintTop_toBottomOf="@+id/editText_Buscador" />

    <Button
        android:id="@+id/button4"
        style="@style/diseño_botones"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:layout_marginTop="16dp"
        android:onClick="irLugaresFavoritos"
        android:text="@string/btn_lugares_favoritos"
        android:textColor="#000000"
        android:textSize="20sp"
        app:backgroundTint="@null"
        app:icon="@drawable/fav"
        app:iconSize="50dp"
        app:iconTint="#151414"
        app:layout_constraintEnd_toEndOf="@+id/button3"
        app:layout_constraintStart_toStartOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button5"
        style="@style/diseño_botones"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:layout_marginTop="16dp"
        android:onClick="notificacion"
        android:text="@string/btn_notificaciones"
        android:textColor="#000000"
        android:textSize="20sp"
        app:backgroundTint="@null"
        app:icon="@drawable/not"
        app:iconGravity="textEnd"
        app:iconSize="50dp"
        app:iconTint="#151414"
        app:layout_constraintEnd_toEndOf="@+id/button4"
        app:layout_constraintStart_toStartOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <TextView
        android:id="@+id/txt_lugares_top"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/tv_lugares_top"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/button5"
        app:layout_constraintStart_toStartOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <TextView
        android:id="@+id/tv_promociones_top"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/tv_promociones_top"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/button5"
        app:layout_constraintStart_toStartOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/rv_lista_lugares_top" />

    <Button
        android:id="@+id/button6"
        style="@style/diseño_botones"
        android:layout_width="0dp"
        android:layout_height="83dp"

        android:layout_marginTop="8dp"
        android:onClick="irPromociones"
        android:text="@string/btn_ver_promociones"
        android:textColor="#000000"
        android:textSize="20sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/rv_lista_lugares_top"
        app:layout_constraintHorizontal_bias="0.217"
        app:layout_constraintStart_toStartOf="@+id/rv_lista_lugares_top"
        app:layout_constraintTop_toBottomOf="@+id/tv_promociones_top"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_lista_lugares_top"
        android:layout_width="0dp"
        android:layout_height="142dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/txt_lugares_top"
        app:layout_constraintStart_toStartOf="@+id/txt_lugares_top"
        app:layout_constraintTop_toBottomOf="@+id/txt_lugares_top" />
</androidx.constraintlayout.widget.ConstraintLayout>